# KS-CP-violation-in-GGSZ

./: .gitignore  README.md
amplitude_calculations/: .gitignore  CMakeLists.txt  README.md  k_amplitudes
amplitude_calculations/HepMC-2.06.08/: CMakeLists.txt
amplitude_calculations/HepMC-2.06.08/HepMC/: CMakeLists.txt
amplitude_calculations/HepMC-2.06.08/autom4te.cache/: output.0  traces.0
amplitude_calculations/HepMC-2.06.08/build_tmp/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake
amplitude_calculations/HepMC-2.06.08/build_tmp/HepMC/: CTestTestfile.cmake  Makefile  cmake_install.cmake
amplitude_calculations/HepMC-2.06.08/build_tmp/lib/: libHepMC.4.0.0.dylib
amplitude_calculations/HepMC-2.06.08/build_tmp/src/: CTestTestfile.cmake  Makefile  Units.cc  cmake_install.cmake
amplitude_calculations/HepMC-2.06.08/src/: CMakeLists.txt
amplitude_calculations/include/: DtoKpipiAmplitude.h  EvtGenAmplitude.h  OutputMaker.h  TDalitz.h
amplitude_calculations/src/: DtoKpipiAmplitude.cpp  EvtGenAmplitude.cpp  OutputMaker.cpp  TDalitz.cpp  main.cpp
example_scripts/: calculate_Fi_cisi.py  profile_memory.py
mathematica_checks/: CalculationCheck.nb  KaonBases.nb
notebooks/: BinningPlotMaker.ipynb  CorrelationCalculations.ipynb  MakePaperBiasPlots.ipynb
python/: Amplitude.py  BiasStudy.py  Binning.py  CompleteStudy.py  DefaultEfficiency.py  GammaFitter.py  GammaFitterXiSetup.py  MultimodelBiasStudy.py  PhaseSpaceDependentMomentum.py  PhysicalParameters.py  ROOTFunctions.py  TimeDependentEfficiency.py  (+2 more)
(+19 files in other folders)
